# rk3588-yolov5s-rtmp-benchmark

./: .gitignore  CMakeLists.txt  README_OrangePi.md  Readme.md  SafeQueue.h  benchmark_notes.md  benchmark_notes_sudo_npu.md  benchmark_stats.cpp  benchmark_stats.h  debug_log.h  main.cpp  mpp.c  mpp.h  perf_monitor.cpp  perf_monitor.h  post_process.cpp  post_process.h  rtmp.c  rtmp.h  streamer.c  streamer.h  thread_poll.cpp  thread_poll.h  yolov5s.cpp  yolov5s.h
model/: main.cpp
